objects/Send_Mail_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Batch Send Mail Settings</label>
    <fields>
        <fullName>bcc_mails__c</fullName>
        <label>bcc mails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Send_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Send Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_ProductLines__c</fullName>
        <label>Allowed ProductLines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>